FreeBSD Foundation.

This file contains major changes to ports and the ports infrastructure.
Intended audience are ports committers, maintainers and other
developers. User oriented changes should be submitted for inclusion
in the release notes and/or placed into UPDATING.

All ports committers are allowed to commit to this file.

20180106:
AUTHOR: kde@FreeBSD.org

  USES=qmake now accepts a new variable, QMAKE_CONFIGURE_ARGS.

  Starting with Qt 5.8.0, qmake can use configure.json files to help define
  configuration options and configuration time checks. These options are
  generally in the form '-foo -no-bar', and must be passed after "--" at the
  end of qmake's command line.

  The QMAKE_CONFIGURE_ARGS variable allows one to set those options, and
  USES=qmake takes care of passing them at the right position when invoking
  qmake.

20180102:
AUTHOR: kde@FreeBSD.org
  
  There is a new USES=eigen to depend on math/eigen[23].
  
  Usage: 
    USES=eigen:<version>[,<type>]

    version: 2 or 3 (required)
    type:    build (default), run

  For example:
    USES=eigen:2,build,run
  will add a BUILD- and RUN_DEPENDS on math/eigen2, and
    USES=eigen:3 
  will add a BUILD_DEPENDS on math/eigen3.

20171231:
AUTHOR: kde@FreeBSD.org

  USES=cmake now supports two additional list variables: 
    * CMAKE_ON  : List of variables to turn on
    * CMAKE_OFF : List of variables to turn off
  This can be used as a shortcut to append these to CMAKE_ARGS.

  For example ports that previously set 
    CMAKE_ARGS=		-DVAR1:BOOL=TRUE -DVAR2:BOOL=TRUE -DVAR3:BOOL=FALSE
  can now set this as
    CMAKE_ON=		VAR1 VAR2
    CMAKE_OFF=		VAR3

20171130:
AUTHOR: mat@FreeBSD.org

  Ports using USE_PYTHON=distutils are now flavored.  They will automatically
  get flavors (py27, py34, py35, py36) depending on what versions they support.

  There is also a USE_PYTHON=flavors for ports that do not use distutils but
  need FLAVORS to be set.  A USE_PYTHON=noflavors can be set if the port is